--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+body{
+    height: 1000px;
+}
+.mainnavbar{
+    background-color: black;
+    position: fixed;
+    width:100%;
+    margin: 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.loginbutton{
+    height:40px;
+    margin-left: 4px;
+    margin-right:3px;
+    border-radius: 20px;
+    background-color:cornflowerblue
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.signinbutton{
+    height: 40px;
+    border-radius: 20px;
+    margin-left: 3px;
+    background-color: cornflowerblue;
+    
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image{
+    background-image: url(/public/img/ok.jpg);
+    height: 1000px;
+    width: 100%;
 }
